force-app/main/default/objects/Charity__c/Charity__c.object-meta.xml
<CustomObject>
    <label>Charity</label>
    <nameField>
        <label>Charity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Charities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>