force-app/main/default/objects/Charity__c/fields/ABN_URL__c.field-meta.xml
<CustomField>
    <fullName>ABN_URL__c</fullName>
    <label>ABN URL</label>
    <type>Url</type>
</CustomField>