force-app/main/default/objects/Charity__c/fields/Suburb_Town__c.field-meta.xml
<CustomField>
    <fullName>Suburb_Town__c</fullName>
    <label>Suburb/Town</label>
    <length>255</length>
    <type>Text</type>
</CustomField>