force-app/main/default/objects/Charity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>URL__c</columns>
    <columns>Suburb_Town__c</columns>
    <columns>State__c</columns>
    <columns>ABN_URL__c</columns>
    <columns>Total_Donations__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>